--- a/locallibrary/locale/en/LC_MESSAGES/django.po
+++ b/locallibrary/locale/en/LC_MESSAGES/django.po
@@ -16,31 +16,31 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: .\catalog\models.py:9
 msgid "Enter a book genre (e.g. Science Fiction)"
-msgstr "Nhập thể loại sách (ví dụ: Khoa học viễn tưởng)"
+msgstr "Enter a book genre (e.g. Science Fiction)"
 
 #: .\catalog\models.py:21
 msgid "Enter a brief description of the book"
-msgstr "Nhập mô tả ngắn gọn về cuốn sách"
+msgstr "Enter a brief description of the book"
 
 #: .\catalog\models.py:22
 msgid ""
 "13 Characters <a href=\"https://www.isbn-international.org/content/what-isbn"
 "\">ISBN number</a>"
 msgstr ""
-"13 ký tự <a href=\"https://www.isbn-international.org/content/what-isbn\">Số "
-"ISBN</a>"
+"13 Characters <a href=\"https://www.isbn-international.org/content/what-isbn"
+"\">ISBN number</a>"
 
 #: .\catalog\models.py:24
 msgid "Select a genre for this book"
-msgstr "Chọn thể loại cho cuốn sách này"
+msgstr "Select a genre for this book"
 
 #: .\catalog\models.py:43
 msgid "Unique ID for this particular bookacross whole library"
-msgstr "ID duy nhất cho cuốn sách cụ thể này trên toàn bộ thư viện"
+msgstr "Unique ID for this particular bookacross whole library"
 
 #: .\catalog\templates\base_generic.html:6
 msgid "Local Library"
@@ -48,104 +48,104 @@ msgstr "Local Library"
 
 #: .\catalog\templates\base_generic.html:27
 msgid "Home"
-msgstr "Trang Chủ"
+msgstr "Home"
 
 #: .\catalog\templates\base_generic.html:30
 msgid "All books"
-msgstr "Sách"
+msgstr "All books"
 
 #: .\catalog\templates\base_generic.html:33
 msgid "All authors"
-msgstr "Tác giả"
+msgstr "All authors"
 
 #: .\catalog\templates\base_generic.html:44
 msgid "previous"
-msgstr "trang trước"
+msgstr "previous"
 
 #: .\catalog\templates\base_generic.html:46
 msgid "Page"
-msgstr "Trang"
+msgstr "Page"
 
 #: .\catalog\templates\base_generic.html:46
 msgid "of"
-msgstr "của"
+msgstr "of"
 
 #: .\catalog\templates\base_generic.html:50
 msgid "next"
-msgstr "trang sau"
+msgstr "next"
 
 #: .\catalog\templates\catalog\book_detail.html:3
 #, fuzzy
 #| msgid "Authors:"
 msgid "Author:"
-msgstr "Số lượng tác giả:"
+msgstr "Authors:"
 
 #: .\catalog\templates\catalog\book_detail.html:5
 msgid "Summary:"
-msgstr "Tóm tắt:"
+msgstr "Summary"
 
 #: .\catalog\templates\catalog\book_detail.html:6
 msgid "ISBN:"
-msgstr "Mã ISBN"
+msgstr "ISBN"
 
 #: .\catalog\templates\catalog\book_detail.html:7
 msgid "Language:"
-msgstr "Ngôn ngữ"
+msgstr "Language"
 
 #: .\catalog\templates\catalog\book_detail.html:8
 msgid "Genre:"
-msgstr "Thể loại:"
+msgstr "Genre"
 
 #: .\catalog\templates\catalog\book_detail.html:10
 #, fuzzy
 #| msgid "Copies:"
 msgid "Copies"
-msgstr "Số bản:"
+msgstr "Copies:"
 
 #: .\catalog\templates\catalog\book_detail.html:19
 msgid "Due to be returned:"
-msgstr "Ngày hoàn trả"
+msgstr "Due to be returned:"
 
 #: .\catalog\templates\catalog\book_detail.html:21
 msgid "Imprint:"
-msgstr "Ấn bản:"
+msgstr "Imprint:"
 
 #: .\catalog\templates\catalog\book_list.html:12
 msgid "There are no books in the library."
-msgstr "Không có cuốn sách nào trong Library"
+msgstr "There are no books in the library."
 
 #: .\catalog\templates\index.html:4
 msgid "Local Library Home"
-msgstr "Trang chủ Local Library"
+msgstr "Local Library Home"
 
 #: .\catalog\templates\index.html:5
 msgid ""
 "Welcome to LocalLibrary, a website developed by <em>Mozilla Developer "
 "Network</em>!"
 msgstr ""
-"Chào mừng bạn đến với LocalLibrary, một trang web được phát triển bởi "
-"<em>Mozilla Developer Network</em>!"
+"Welcome to LocalLibrary, a website developed by <em>Mozilla Developer "
+"Network</em>"
 
 #: .\catalog\templates\index.html:6
 msgid "Dynamic content"
-msgstr "Nội dung động"
+msgstr "Dynamic content"
 
 #: .\catalog\templates\index.html:7
 msgid "The library has the following record counts:"
-msgstr "Thư viện có số lượng ấn phẩm sau:"
+msgstr "The library has the following record counts:"
 
 #: .\catalog\templates\index.html:9
 msgid "Books:"
-msgstr "Số sách:"
+msgstr "Books:"
 
 #: .\catalog\templates\index.html:10
 msgid "Copies:"
-msgstr "Số bản:"
+msgstr "Copies:"
 
 #: .\catalog\templates\index.html:11
 msgid "Copies available:"
-msgstr "Số bản có thể mượn:"
+msgstr "Copies available:"
 
 #: .\catalog\templates\index.html:12
 msgid "Authors:"
-msgstr "Số lượng tác giả:"
+msgstr "Authors:"
