--- a/locallibrary/locale/vi/LC_MESSAGES/django.po
+++ b/locallibrary/locale/vi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-31 15:44+0700\n"
+"POT-Creation-Date: 2023-09-05 15:13+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,15 +18,15 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: .\catalog\models.py:9
+#: .\catalog\models.py:11
 msgid "Enter a book genre (e.g. Science Fiction)"
 msgstr "Nhập thể loại sách (ví dụ: Khoa học viễn tưởng)"
 
-#: .\catalog\models.py:21
+#: .\catalog\models.py:23
 msgid "Enter a brief description of the book"
 msgstr "Nhập mô tả ngắn gọn về cuốn sách"
 
-#: .\catalog\models.py:22
+#: .\catalog\models.py:24
 msgid ""
 "13 Characters <a href=\"https://www.isbn-international.org/content/what-isbn"
 "\">ISBN number</a>"
@@ -34,43 +34,63 @@ msgstr ""
 "13 ký tự <a href=\"https://www.isbn-international.org/content/what-isbn\">Số "
 "ISBN</a>"
 
-#: .\catalog\models.py:24
+#: .\catalog\models.py:28
 msgid "Select a genre for this book"
 msgstr "Chọn thể loại cho cuốn sách này"
 
-#: .\catalog\models.py:43
+#: .\catalog\models.py:47
 msgid "Unique ID for this particular bookacross whole library"
 msgstr "ID duy nhất cho cuốn sách cụ thể này trên toàn bộ thư viện"
+
+#: .\catalog\models.py:63
+msgid "Book availability"
+msgstr "Sách có thể mượn"
 
 #: .\catalog\templates\base_generic.html:6
 msgid "Local Library"
 msgstr "Local Library"
 
-#: .\catalog\templates\base_generic.html:27
+#: .\catalog\templates\base_generic.html:59
 msgid "Home"
 msgstr "Trang Chủ"
 
-#: .\catalog\templates\base_generic.html:30
+#: .\catalog\templates\base_generic.html:62
 msgid "All books"
 msgstr "Sách"
 
-#: .\catalog\templates\base_generic.html:33
+#: .\catalog\templates\base_generic.html:65
 msgid "All authors"
 msgstr "Tác giả"
 
-#: .\catalog\templates\base_generic.html:44
+#: .\catalog\templates\base_generic.html:68
+msgid "User:"
+msgstr "Người dùng:"
+
+#: .\catalog\templates\base_generic.html:70
+msgid "My Borrowed"
+msgstr "Sách đã mượn"
+
+#: .\catalog\templates\base_generic.html:74
+msgid "Logout"
+msgstr "Đăng xuất"
+
+#: .\catalog\templates\base_generic.html:80
+msgid "Login"
+msgstr "Đăng Nhập"
+
+#: .\catalog\templates\base_generic.html:93
 msgid "previous"
 msgstr "trang trước"
 
-#: .\catalog\templates\base_generic.html:46
+#: .\catalog\templates\base_generic.html:95
 msgid "Page"
 msgstr "Trang"
 
-#: .\catalog\templates\base_generic.html:46
+#: .\catalog\templates\base_generic.html:95
 msgid "of"
 msgstr "của"
 
-#: .\catalog\templates\base_generic.html:50
+#: .\catalog\templates\base_generic.html:99
 msgid "next"
 msgstr "trang sau"
 
@@ -110,8 +130,18 @@ msgstr "Ngày hoàn trả"
 msgid "Imprint:"
 msgstr "Ấn bản:"
 
-#: .\catalog\templates\catalog\book_list.html:12
+#: .\catalog\templates\catalog\book_list.html:4
+msgid "Book list"
+msgstr "Danh sách các cuốn sách"
+
+#: .\catalog\templates\catalog\book_list.html:14
 msgid "There are no books in the library."
+msgstr "Không có cuốn sách nào trong Library"
+
+#: .\catalog\templates\catalog\bookinstance_list_borrowed_user.html:15
+#, fuzzy
+#| msgid "There are no books in the library."
+msgid "There are no books borrowed."
 msgstr "Không có cuốn sách nào trong Library"
 
 #: .\catalog\templates\index.html:4
@@ -152,12 +182,49 @@ msgstr "Số lượng tác giả:"
 
 #: .\catalog\templates\index.html:14
 msgid "You have visited this page"
-msgstr "Bạn đã ghé thăm trang web"
+msgstr "Bạn đã ghé thăm trang web này"
 
 #: .\catalog\templates\index.html:14
 msgid "time"
-msgstr "lần"
+msgstr "lầ"
 
 #: .\catalog\templates\index.html:14
 msgid "s"
-msgstr ""
+msgstr "n"
+
+#: .\catalog\templates\registration\logged_out.html:2
+msgid "Logged out!"
+msgstr "Đăng xuất"
+
+#: .\catalog\templates\registration\logged_out.html:3
+msgid "Click here to login again."
+msgstr "Bấm vào đây để đăng nhập lại"
+
+#: .\catalog\templates\registration\login.html:5
+msgid "Your username and password didn\\"
+msgstr "Tài khoản hoăc mật khẩu không đúng"
+
+#: .\catalog\templates\registration\login.html:14
+msgid "Please login to see this page."
+msgstr "Vui lòng đăng nhập"
+
+#: .\catalog\templates\registration\login.html:36
+msgid "Lost password?"
+msgstr "Quên mật khẩu ?"
+
+#: .\catalog\templates\registration\password_reset_confirm.html:3
+msgid "Please enter (and confirm) your new password."
+msgstr "Hãy nhập (và xác nhận) mật khẩu mới của bạn"
+
+#: .\catalog\templates\registration\password_reset_confirm.html:10
+msgid "New password:"
+msgstr "Mật khẩu mới:"
+
+#: .\catalog\templates\registration\password_reset_confirm.html:18
+msgid "Confirm password:"
+msgstr "Nhập lại mật khẩu"
+
+#: .\catalog\templates\registration\password_reset_confirm.html:30
+msgid "Password reset failed"
+msgstr "Đặt lại mật khẩu không thành công"
+
